# opentelemetry-python-api

./: BUILD_AND_PUBLISH.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.poetry.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: fastapi_app.py  flask_app.py  quickstart.py  tracer_conflict_detection.py
examples/django_app/: manage.py
examples/django_app/api/: models.py
examples/django_app/django_app/: settings.py  urls.py
scripts/: build.py
src/otel_tracer/: __init__.py  database.py  exporters.py  py.typed  tracer.py
src/otel_tracer/frameworks/: __init__.py  django.py  fastapi.py  flask.py
tests/: __init__.py  conftest.py  test_exporters.py  test_flask_integration.py  test_multi_exporter.py  test_tracer.py  test_tracer_initialization_check.py
